@@ -124,7 +124,7 @@ VOID egDrawImageArea(IN EG_IMAGE *Image,
 VOID egDisplayMessage(IN CHAR16 *Text, EG_PIXEL *BGColor);
 VOID egScreenShot(VOID);
 //UINT32 egGetGraphicsMode(VOID);
-UINT32 egSetTextMode(UINT32 RequestedMode);
+BOOLEAN egSetTextMode(UINT32 RequestedMode);
 
 #endif /* __LIBEG_LIBEG_H__ */
 
